# saesth

./: LICENCE.md  package-lock.json  package.json
src/: App.css  App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/data/: sounds.rs
src-tauri/src/database/: database.rs
src-tauri/src/sounds/: apply_sound.rs  mod.rs  random_sound.rs  sound_handler.rs
src-tauri/src/sounds/drift/: mod.rs  sound_drift.rs
src-tauri/src/sounds/effects/: mod.rs
src-tauri/src/sounds/effects/rain/: mod.rs  thunder.rs
src-tauri/src/utils/: init_tray.rs  mod.rs  sound_stream.rs
src/component/: Header.tsx  Sound-card.tsx  sound-card.tsx
src/interface/: sound-data.ts
src/pages/: DrawHome.tsx  pages.ts
